# rott

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  install.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.pi/prompts/: release.md
.pi/skills/release/: SKILL.md
crates/rott-cli/: Cargo.toml
crates/rott-cli/src/: editor.rs  main.rs  metadata.rs  output.rs
crates/rott-cli/src/commands/: config.rs  link.rs  mod.rs  note.rs  status.rs  sync.rs  tag.rs
crates/rott-cli/src/tui/: app.rs  mod.rs  setup.rs  sync.rs  ui.rs
crates/rott-core/: Cargo.toml
crates/rott-core/src/: config.rs  document.rs  identity.rs  lib.rs  models.rs  store.rs
crates/rott-core/src/storage/: error.rs  mod.rs  persistence.rs  projection.rs  schema.rs
crates/rott-core/src/sync/: client.rs  message.rs  mod.rs  persistent.rs  state.rs
crates/rott-tui/: Cargo.toml
crates/rott-tui/src/: app.rs  editor.rs  main.rs  metadata.rs  sync.rs  ui.rs
docs/: ARCHITECTURE.md  IDENTITY.md  SYNC_SERVER_SETUP.md  TROUBLESHOOTING.md
docs/plans/: IOS_APP.md  LINKBLOG.md  README.md  RUST_CLI_TUI.md  SYNC_SERVER.md  WEB_APP.md  WEB_SERVER.md
hack/: config.toml  config.yml  deploy.sh  open_orion.applescript  shoreman.sh
man/: rott-init.1  rott-link.1  rott-sync.1  rott.1
src/: cli.rs  config.rs  config_test.rs  main.rs  metadata.rs  watcher.rs
src/app/: handlers.rs  mod.rs  models.rs
src/links/: handlers.rs  handlers_test.rs  mod.rs  models.rs  models_test.rs  service.rs  service_test.rs
