[package]
name = "rott"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15.6"
gray_matter = "0.2.8"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.20"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
open = "5.3.2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.14.0"
