[workspace]
resolver = "2"
members = [
    "crates/rott-core",
    "crates/rott-cli",
]

[workspace.package]
version = "2.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/evcraddock/rott"

[workspace.dependencies]
# Automerge
automerge = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP (for metadata fetching)
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.20"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Encoding
base64 = "0.22"
ciborium = "0.2"
serde_bytes = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bs58 = { version = "0.5", features = ["check"] }
dirs = "5.0"
open = "5.3"

# Testing
tempfile = "3.14"

# Internal crates
rott-core = { path = "crates/rott-core" }
