[package]
name = "rott-cli"
description = "Command-line interface for ROTT"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rott"
path = "src/main.rs"

[dependencies]
rott-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
scraper.workspace = true
atty = "0.2"
uuid = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
