[package]
name = "rott-core"
description = "Core library for ROTT - links and notes management with Automerge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
automerge.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
bs58.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
base64.workspace = true
ciborium.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
