[package]
name = "rott-tui"
description = "Terminal user interface for ROTT"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rott-tui"
path = "src/main.rs"

[dependencies]
rott-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
chrono.workspace = true
open.workspace = true
tokio.workspace = true
reqwest.workspace = true
scraper.workspace = true
uuid.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
